--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         rel="stylesheet" 
         integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
         crossorigin="anonymous">
-  </head>
+    <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <div class="container">
@@ -36,9 +36,55 @@
                     </tfoot>
                 </table>
             </div>
-            <div class="productos"></div>
+            <div class="productos">
+                <h4 class="text-center">Productos</h4>
+                <div class="row" id="cards"></div>
+            </div>
         </div>
     </div>
+    <template id="template-footer">
+        <th scope="row" colspan="2">
+            Total de productos
+        </th>
+        <td>10</td>
+        <td>
+            <button class="btn btn-danger btn-sm"
+                    id="vaciar-carrito">
+                Vaciar Carrito
+            </button>
+        </td>
+        <td class="font-weight-bold">
+            <span>5000</span>
+        </td>
+    </template>
+    <template id="template-carrito">
+        <tr>
+            <th spcope="row">id</th>
+            <td>1</td>
+            <td>
+                <button class="btn btn-success btn-sm">+</button>
+                ~
+                <button class="btn btn-danger btn-sm">-</button>
+            </td>
+            <td>
+                $ <span>500</span>
+            </td>
+        </tr>
+    </template>
+    <template id="template-card">
+        <div class="col-12 col-md-6 mb-2">
+            <div class="card">
+                <img src="" all="" srcset="card-img-top" class="imageUrl">
+                <div class="card-body">
+                    <h5>Titulo</h5>
+                    <p>Precio</p>
+                    <button clas="btn btn-dark">
+                        Comprar
+                    </button>
+                </div>
+            </div>
+        </div>
+    </template>
     <script src="./js/app.js"></script>
 </body>
 </html>
