--- a/index.html
+++ b/index.html
@@ -4,18 +4,23 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Carrito de compras</title>
+    <title>Carrito de Compras 🛒</title>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" 
-        rel="stylesheet" 
-        integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
-        crossorigin="anonymous">
+          rel="stylesheet" 
+          integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" 
+          crossorigin="anonymous">
     <link rel="stylesheet" href="./css/index.css">
 </head>
 <body>
     <div class="container">
-        <h4 class="text-center">Carrito de Compras</h4>
+        <h4 class="text-center"> Carrito de Compras </h4>
         <div class="contenido">
             <div class="compras">
+                <table>
+                    <tr><th>Raul Eduardo Ortega Zavala</th></tr>
+                    <tr><th>NUA: 147667</th></tr>
+                    <tr><TH>Aplicaciones de internet</TH></tr>
+                </table>
                 <table class="table">
                     <thead>
                         <tr>
@@ -28,9 +33,10 @@
                     </thead>
                     <tbody id="items"></tbody>
                     <tfoot>
+                        
                         <tr id="footer">
                             <th scope="row" colspan="5">
-                            Carrito Vacio - Compra ya!!!
+                                Carrito Vacio - Compra ya! 
                             </th>
                         </tr>
                     </tfoot>
@@ -42,28 +48,29 @@
             </div>
         </div>
     </div>
+
     <template id="template-footer">
         <th scope="row" colspan="2">
-            Total de productos
+            Total de Productos
         </th>
         <td>10</td>
         <td>
-            <button class="btn btn-danger btn-sm"
-                    id="vaciar-carrito">
+            <button class="btn btn-danger btn-sm" id="vaciar-carrito">
                 Vaciar Carrito
             </button>
         </td>
         <td class="font-weight-bold">
-            <span>5000</span>
+            $ <span>5000</span>
         </td>
     </template>
     <template id="template-carrito">
         <tr>
-            <th spcope="row">id</th>
+            <th scope="row">id</th>
+            <td>Cafe</td>
             <td>1</td>
             <td>
                 <button class="btn btn-success btn-sm">+</button>
-                ~
+                &nbsp;
                 <button class="btn btn-danger btn-sm">-</button>
             </td>
             <td>
@@ -71,14 +78,15 @@
             </td>
         </tr>
     </template>
+
     <template id="template-card">
         <div class="col-12 col-md-6 mb-2">
             <div class="card">
-                <img src="" all="" srcset="card-img-top" class="imageUrl">
+                <img src="" alt="" srcset="" class="card-img-top">
                 <div class="card-body">
                     <h5>Titulo</h5>
                     <p>Precio</p>
-                    <button clas="btn btn-dark">
+                    <button class="btn btn-dark">
                         Comprar
                     </button>
                 </div>
